@@ -18,22 +18,12 @@ class Mouse;
 
 #define P(sf,x,y) *((Uint8*)(sf)->pixels + (y)*(sf)->pitch + (x))
 
-enum { 
-	F1=256, F2, F3, F4, F5, F6, F7, F8, F9, F10, F11, F12,
-	K_UP, K_DOWN, K_LEFT, K_RIGHT, HOME, DELETE, PAGE_UP, PAGE_DOWN,
-	INSERT, END, SH_UP, SH_DOWN, SH_LEFT, SH_RIGHT, CT_PAGE_UP,
-	CT_PAGE_DOWN, SH_PAGE_UP, SH_PAGE_DOWN, QUIT, RESIZE,
-	MPRESS, MRELEASE, MDRAG
-};
-
-
 typedef struct FullScreenInfo {
 	bool isFullScreen;
 	int old_w, old_h, old_border_x;
 	
 	FullScreenInfo() : isFullScreen(false), old_w(0), old_h(0) { }
 } FullScreenInfo;
-
 
 class Screen
 {
@@ -50,7 +40,6 @@ public:
 
 	string const& FontEncoding() const { return font->Encoding; }
 
-	deque<uint32_t> keyQueue;
 	static SDL_Color palette[256];
 
 private:
